# wasm-slim

./: .gitignore  .wasm-slim.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: CI_SETUP.md  QUICK_REFERENCE.md  dependabot.yml
.github/workflows/: README.md  benchmarks.yml  ci-weekly.yml  ci.yml  coverage.yml  maintenance.yml  quality.yml  security.yml  test.yml
benches/: README.md  asset_scanning.rs  backup_operations.rs  cargo_optimizer.rs  config_parsing.rs  dependency_analysis.rs  twiggy_parsing.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  PERFORMANCE.md  PERFORMANCE_TRACKING.md  TESTING.md  TESTING_BEST_PRACTICES.md
examples/: README.md
examples/basic-usage/: Cargo.toml  README.md
examples/basic-usage/src/: lib.rs
examples/ci-integration/: .wasm-slim.toml  Cargo.toml  README.md
examples/ci-integration/.github/workflows/: wasm-slim.yml
examples/ci-integration/src/: lib.rs
examples/with-assets/: .wasm-slim.toml  Cargo.toml  README.md
examples/with-assets/assets/: data.json  font.txt
examples/with-assets/src/: lib.rs
proptest-regressions/analyzer/: assets.txt  bloat.txt
scripts/: README.md  ci-check.sh  full-ci-with-act.sh
src/: error.rs  fmt.rs  git.rs  infra.rs  lib.rs  main.rs  toolchain.rs  tools.rs
src/analyzer/: allocator.rs  applicator.rs  asset_display.rs  asset_metrics.rs  asset_report.rs  asset_types.rs  asset_visitor.rs  assets.rs  bloat.rs  bloat_report.rs  deps.rs  deps_report.rs  deps_types.rs  feature_report.rs  features.rs  heavy_deps.rs  mod.rs  panic_advisor.rs  panic_report.rs  panics.rs  report_utils.rs  twiggy_report.rs
src/analyzer/twiggy/: analysis_types.rs  comparison.rs  error.rs  executor.rs  mod.rs  parser.rs  recommendation.rs  recommendations.rs
src/bench_tracker/: comparator.rs  mod.rs  parser.rs  reporter.rs  storage.rs
src/cicd/: budget.rs  display.rs  history.rs  mod.rs  output.rs
src/cmd/: analyze.rs  build.rs  compare.rs  completions.rs  init.rs  mod.rs  workflow.rs
src/config/: file.rs  loader.rs  mod.rs  profile_config.rs  resolver.rs  template.rs  validator.rs  wasm_config.rs
src/optimizer/: backup.rs  build_std.rs  mod.rs
src/optimizer/cargo/: cargo_analyzer.rs  cargo_file_finder.rs  cargo_toml_editor.rs  mod.rs
src/pipeline/: build_orchestrator.rs  config.rs  error.rs  executor.rs  metrics.rs  mod.rs  result_formatter.rs  telemetry.rs  tool_runner.rs
tests/: analyze_tests.rs  apply_suggestions_integration.rs  assertion_helpers_test.rs  bench_tracker_bin_tests.rs  bloat_integration.rs  build_tests.rs  cleanup_tests.rs  cli_integration.rs  cli_tests.rs  compare_tests.rs  error_recovery_integration.rs  init_tests.rs  pipeline_integration.rs  platform_integration.rs  timeout_integration.rs  tools_integration.rs  twiggy_integration.rs  windows_platform_integration.rs  workflow_tests.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
